--- a/Views/Authorization/Login.cshtml
+++ b/Views/Authorization/Login.cshtml
@@ -2,13 +2,14 @@
     ViewData["Title"] = "Вход - Quiet Planet";
 }
 
-<section class="min-h-screen flex items-center justify-center bg-gradient-to-br from-[#14002A] to-[#2D1B4D] px-6">
+<section class="min-h-screen flex items-center justify-center bg-gradient-to-br from-[#0A0014] to-[#1A0C2D] px-4" style="aspect-ratio: 16 / 9; background-image: url('/images/MainPage/cosmos1.jpg'); background-size: cover; background-position: center;">
 
     <script src="/js/sha256.min.js"></script>
     <script src="/js/BigInteger.min.js"></script>
     <script src="/js/script.js"></script>
 
     <div class="bg-black bg-opacity-60 backdrop-blur-md p-8 rounded-2xl shadow-lg max-w-md w-full">
+
         <h1 class="text-3xl font-bold text-white mb-6 text-center font-['Merriweather']">Вход</h1>
 
         <input type="text" id="loginUsername" placeholder="Имя пользователя"
